# wgpu-gltf

./: Cargo.toml  justfile
src/: main.rs
src/shaders/: shader.wgsl
